# exif-oxide

./: .gitattributes  .gitignore  .gitmodules  .yamllint.yml  BUILD-CRISIS-ANALYSIS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  GPMF_INTEGRATION_STATUS.md  LICENSE  Makefile  README.md  RELEASE.md  SECURITY.md  TODO-FILE_TYPE_LOOKUP_TESTS.md  TODO.md  TagMetadata.json  binary_ast_integration_plan.md  build.rs  claude.sh  cliff.toml  cpanfile  debug_sprintf.pl  exiftool-sync.toml  makernotes-main.json  release-plz.toml  test_gpmf_debug.rs  xmp_test_output.json
ast/: Cargo.toml
ast/src/: exif_context.rs  lib.rs  ppi_converter.rs  ppi_types.rs
codegen/: Cargo.toml  ENTRY_COUNT_POLICY.md  MODULAR_ARCHITECTURE.md  Makefile  Makefile.modular  extract.json  extract_schema.json  extract_simple_tables.pl  extract_tables.pl  generate_sony_offset_patterns.pl  inline_printconv__camera_settings.json  parallel_demo.sh  patch_exiftool_modules.pl  simple_tables.json  simple_tables_schema.json  sony_offset_patterns.json  tag_tables.json  test_patch.pl  test_patching.rs
codegen/config/: supported_tags.json
codegen/config/AIFF_pm/: composite_tags.json
codegen/config/APE_pm/: composite_tags.json
codegen/config/CanonRaw_pm/: tag_kit.json
codegen/config/Canon_pm/: composite_tags.json  conditional_tags.json  inline_printconv.json  inline_tables.json  process_binary_data.json  runtime_table.json  simple_table.json  tag_kit.json  tag_structure.json  tag_table_structure.json
codegen/config/Casio_pm/: tag_kit.json
codegen/config/DNG_pm/: tag_kit.json
codegen/config/ExifTool_pm/: boolean_set.json  composite_tags.json  file_type_lookup.json  regex_patterns.json  simple_table.json
codegen/config/Exif_pm/: composite_tags.json  inline_printconv.json  simple_table.json  tag_definitions.json  tag_kit.json
codegen/config/FLAC_pm/: composite_tags.json
codegen/config/Font_pm/: tag_kit.json
codegen/config/FujiFilm_pm/: model_detection.json  process_binary_data.json  tag_kit.json
codegen/config/GPS_pm/: composite_tags.json  tag_definitions.json  tag_kit.json
codegen/config/IPTC_pm/: tag_kit.json
codegen/config/JPEG_pm/: tag_kit.json
codegen/config/Jpeg2000_pm/: tag_kit.json
codegen/config/KyoceraRaw_pm/: tag_kit.json
codegen/config/MIE_pm/: tag_kit.json
codegen/config/MPEG_pm/: composite_tags.json
codegen/config/Matroska_pm/: tag_kit.json
codegen/config/MinoltaRaw_pm/: inline_printconv.json  tag_kit.json
codegen/config/Nikon_pm/: composite_tags.json  print_conv.json  simple_array.json  simple_table.json  tag_kit.json  tag_table_structure.json
codegen/config/Olympus_pm/: composite_tags.json  equipment_tag_table_structure.json  inline_printconv.json  simple_table.json  tag_kit.json  tag_structure.json  tag_table_structure.json
codegen/config/PDF_pm/: tag_kit.json
codegen/config/PNG_pm/: boolean_set.json  tag_kit.json
codegen/config/PanasonicRaw_pm/: inline_printconv.json  simple_table.json  tag_kit.json
codegen/config/Panasonic_pm/: inline_printconv.json  tag_kit.json
codegen/config/Pentax_pm/: tag_kit.json
codegen/config/Photoshop_pm/: tag_kit.json
codegen/config/PostScript_pm/: tag_kit.json
codegen/config/QuickTime_pm/: composite_tags.json  tag_kit.json
codegen/config/RIFF_pm/: composite_tags.json  tag_kit.json
codegen/config/Ricoh_pm/: tag_kit.json
codegen/config/Samsung_pm/: tag_kit.json
codegen/config/Sigma_pm/: tag_kit.json
codegen/config/Sony_pm/: inline_printconv.json  process_binary_data.json  simple_table.json  tag_kit.json
codegen/config/Vorbis_pm/: composite_tags.json
codegen/config/XMP_pm/: simple_table.json  tag_kit.json
codegen/data/: shared_tables.json
codegen/extractors/: analyze_cross_module_refs.pl  auto_config_gen.pl  boolean_set.pl  composite_tags.pl  conditional_tags.pl  coverage_dashboard.pl  extract.pl  field_extractor.pl  file_type_lookup.pl  inline_printconv.pl  model_detection.pl  normalize_expression.pl  offset_patterns.pl  process_binary_data.pl  regex_patterns.pl  runtime_table.pl  shared_tables.pl  simple_array.pl  simple_table.pl  simple_tables.pl  subdirectory_dependencies.pl  subdirectory_discovery.pl  tag_definitions.pl  tag_kit.pl  tag_table_structure.pl  tag_tables.pl
codegen/lib/: ExifToolExtract.pm
codegen/schemas/: boolean_set.json  composite_tags.json  conditional_tags.json  file_type_lookup.json  print_conv.json  regex_patterns.json  regex_strings.json  runtime_table.json  simple_array.json  simple_table.json  tag_definitions.json  tag_kit.json
codegen/scripts/: analyze_ppi_coverage.pl  auto_config_gen.pl  exiftool-patcher-undo.sh  exiftool-patcher.pl  exiftool-patcher.sh  field_extractor.pl  field_extractor_with_ast.pl  normalize_expression.pl  patch_all_modules.sh  patch_exiftool_modules_universal.pl  ppi_ast.pl  regen-configs.sh  validate_arrays.pl  validate_arrays_README.md
codegen/scripts/PPI/: Simple.pm
codegen/src/: conv_registry.rs  debug_ppi.rs  debug_stats.rs  discovery.rs  expression_compiler.rs  extraction.rs  field_extractor.rs  file_operations.rs  generate_expression_tests.rs  lib.rs  main.rs  patching.rs  printconv_translator.rs  table_processor.rs  test_unary_negation.rs  types.rs  validation.rs
codegen/src/common/: mod.rs  utils.rs
codegen/src/config/: mod.rs
codegen/src/conv_registry/: mod.rs  normalization.rs  printconv_registry.rs  tests.rs  types.rs  valueconv_registry.rs
codegen/src/expression_compiler/: codegen.rs  mod.rs  parser.rs  tests.rs  tokenizer.rs  types.rs
codegen/src/extractors/: boolean_set.rs  file_type.rs  inline_printconv.rs  mod.rs  runtime_table.rs  simple_array.rs  simple_table.rs  stubs.rs  tag_kit.rs  tag_table_structure.rs
codegen/src/generators/: composite_tags.rs  (+17 more)
codegen/tests/: function_import_sync_test.rs  generated_expressions.rs  missing_conversions_test.rs  paren_precedence_test.rs  unsupported_expressions_test.rs
fuzz/: .gitignore  Cargo.toml  seed-corpus.sh
fuzz/fuzz_targets/: fuzz_avif.rs  fuzz_exif_ifd.rs  fuzz_gif.rs  fuzz_iptc.rs  fuzz_jpeg.rs  fuzz_png.rs  fuzz_tiff.rs  fuzz_whole_file.rs  fuzz_xmp.rs
(+1222 files in other folders)
