[package]
name = "exif-oxide"
version = "0.1.0"
edition = "2021"
authors = ["exif-oxide@photostructure.com"]
description = "High-performance Rust implementation of ExifTool"
license = "AGPL-3.0-or-later"
repository = "https://github.com/photostructure/exif-oxide"
keywords = ["exiftool", "exif", "metadata", "image", "video"]
categories = ["multimedia::images", "parser-implementations"]
default-run = "exif-oxide"
exclude = [
    "third-party/*",       # Exclude ExifTool submodule (400MB+)
    "test-images/*",       # Exclude test images (integration tests use feature flag)
    "docs/*",              # Exclude docs  
    "codegen/generated/*", # Exclude codegen artifacts
    "generated/*",         # Exclude compat artifacts
    ".*/*",                # Exclude dev bot and gha gunk
]

[lints.clippy]
# Allow explicit 'static lifetimes in generated code
# This is good practice for public APIs where lifetime guarantees matter
redundant_static_lifetimes = "allow"
# Allow Vec parameters in generated code API - changing would break compatibility
ptr_arg = "allow"
# Allow new without Default in generated code
new_without_default = "allow"
# Allow needless borrows in generated code
needless_borrow = "allow"
# Allow uninlined format args in generated code for clarity
uninlined_format_args = "allow"

[dependencies]
byteorder = "1.5" # Efficient endian handling
thiserror = "2.0" # Error handling
anyhow = "1.0" # Error handling in examples/tests
regex = "1.11" # For parsing ExifTool tables (used in dev tools)
serde = { version = "1.0", features = ["derive"] } # Serialization
serde_json = "1.0" # JSON output
clap = { version = "4.5", features = ["derive"] } # CLI argument parsing
quick-xml = "0.38" # Fast XML parsing for XMP metadata
tracing = "0.1" # Structured logging and instrumentation
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
] } # Tracing subscriber implementation
chrono = { version = "0.4", features = [
    "serde",
] } # Date and time handling for File:FileModifyDate
indexmap = { version = "2.6", features = ["serde"] } # Preserves insertion order for tag output

[dev-dependencies]
criterion = "0.6" # Benchmarking
pretty_assertions = "1.4" # Better test assertions
tempfile = "3.20" # Temporary files for testing
clap = { version = "4.5", features = [
    "derive",
] } # CLI argument parsing for analysis tools
similar = { version = "2.7", features = [
    "text",
] } # Text diffing for ExifTool comparison
tracing-test = "0.2" # Testing utilities for tracing

[features]
default = []
# Test helpers feature - enables test-only public methods for integration tests
test-helpers = []
# Integration tests feature - enables tests that require external test assets
integration-tests = []

[profile.release]
opt-level = 3          # Maximum optimization (equivalent to -O3)
lto = true            # Link-time optimization
codegen-units = 1     # Single codegen unit for better optimization
strip = true          # Strip symbols automatically
panic = "abort"       # Smaller binary, faster panic

[[bin]]
name = "exif-oxide"
path = "src/main.rs"
