[workspace]
members = [".", "codegen"]
resolver = "2"

[package]
name = "exif-oxide"
version = "0.2.0-dev"
edition = "2021"
authors = ["exif-oxide@photostructure.com"]
description = "High-performance Rust implementation of ExifTool"
license = "AGPL-3.0-or-later"
repository = "https://github.com/photostructure/exif-oxide"
keywords = ["exiftool", "exif", "metadata", "image", "video"]
categories = ["multimedia::images", "parser-implementations"]
default-run = "exif-oxide"
exclude = [
    "third-party/*",       # Exclude ExifTool submodule (400MB+)
    "test-images/*",       # Exclude test images (integration tests use feature flag)
    "docs/*",              # Exclude docs  
    "codegen/generated/*", # Exclude codegen artifacts
    "generated/*",         # Exclude compat artifacts
    ".*/*",                # Exclude dev bot and gha gunk
]

[lints.clippy]
# === Defensive Programming Lints ===
# See https://corrode.dev/blog/defensive-programming/

# Prefer TryFrom over From for fallible conversions
fallible_impl_from = "warn"
# Catch functions returning important values that callers might ignore
# TODO: Re-enable before v1.0.0 to audit public API
must_use_candidate = "allow"

# === Generated Code Compatibility ===
# Allow explicit 'static lifetimes in generated code
# This is good practice for public APIs where lifetime guarantees matter
redundant_static_lifetimes = "allow"
# Allow Vec parameters in generated code API - changing would break compatibility
ptr_arg = "allow"
# Allow new without Default in generated code
new_without_default = "allow"
# Allow needless borrows in generated code
needless_borrow = "allow"
# Allow uninlined format args in generated code for clarity
uninlined_format_args = "allow"
# Allow module names that don't follow snake_case (preserves ExifTool naming)
module_name_repetitions = "allow"

[lints.rust]
# Allow module names that don't follow snake_case (preserves ExifTool naming)
non_snake_case = "allow"

[dependencies]
byteorder = "1.5" # Efficient endian handling
thiserror = "2.0" # Error handling
anyhow = "1.0" # Error handling in examples/tests
regex = "1.12" # For parsing ExifTool tables (used in dev tools)
serde = { version = "1.0", features = ["derive"] } # Serialization
serde_json = "1.0" # JSON output
clap = { version = "4.5", features = ["derive"] } # CLI argument parsing
quick-xml = "0.38" # Fast XML parsing for XMP metadata
tracing = "0.1" # Structured logging and instrumentation
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
] } # Tracing subscriber implementation
chrono = { version = "0.4", features = [
    "serde",
] } # Date and time handling for File:FileModifyDate
indexmap = { version = "2.12", features = [
    "serde",
] } # Preserves insertion order for tag output

# Cryptographic hashing for ImageDataHash support (ExifTool -api requesttags=imagedatahash)
md-5 = "0.10"    # MD5 hashing (default algorithm, matches ExifTool default)
sha2 = "0.10"    # SHA256/SHA512 support (optional algorithms)
digest = "0.10"  # Common trait for hash algorithms

[dev-dependencies]
criterion = "0.8" # Benchmarking
pretty_assertions = "1.4" # Better test assertions
tempfile = "3.23" # Temporary files for testing
clap = { version = "4.5", features = [
    "derive",
] } # CLI argument parsing for analysis tools
similar = { version = "2.7", features = [
    "text",
] } # Text diffing for ExifTool comparison
tracing-test = "0.2" # Testing utilities for tracing
walkdir = "2.5" # Directory walking for integration tests
codegen = { path = "codegen" } # For PPI AST integration tests

[features]
default = []
# Test helpers feature - enables test-only public methods for integration tests
test-helpers = []
# Integration tests feature - enables tests that require external test assets
integration-tests = []


[profile.release]
opt-level = 3     # Maximum optimization (equivalent to -O3)
lto = true        # Link-time optimization
codegen-units = 1 # Single codegen unit for better optimization
strip = true      # Strip symbols automatically
panic = "abort"   # Smaller binary, faster panic

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[[bin]]
name = "exif-oxide"
path = "src/main.rs"

[[bin]]
name = "compare-with-exiftool"
path = "src/bin/compare-with-exiftool.rs"
