[package]
name = "codegen"
version = "0.1.0"
edition = "2021"
authors = ["exif-oxide@photostructure.com"]
description = "Code generation tool for exif-oxide"
default-run = "codegen"

[[bin]]
name = "codegen"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
clap = { version = "4.0", features = ["derive"] }
jsonschema = "0.18"
regex = "1.11"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tempfile = "3.8"
base64 = "0.22"
glob = "0.3"
rayon = "1.7"