[package]
name = "codegen"
version = "0.2.0"
edition = "2021"
authors = ["exif-oxide@photostructure.com"]
description = "Code generation tool for exif-oxide"
default-run = "codegen"

[[bin]]
name = "codegen"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "2.0"
clap = { version = "4.5", features = ["derive"] }
jsonschema = "0.32"
regex = "1.11"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tempfile = "3.20"
base64 = "0.22"
glob = "0.3"
rayon = "1.10"
indoc = "2.0"
ast = { path = "../ast" }
