[package]
name = "codegen"
version = "0.2.0"
edition = "2021"
authors = ["exif-oxide@photostructure.com"]
description = "Code generation tool for exif-oxide"
default-run = "codegen"

[[bin]]
name = "codegen"
path = "src/main.rs"

[[bin]]
name = "debug-ppi"
path = "src/debug_ppi.rs"

[[bin]]
name = "generate-expression-tests"
path = "src/generate_expression_tests.rs"

[[bin]]
name = "debug-stats"
path = "src/debug_stats.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "2.0"
clap = { version = "4.5", features = ["derive"] }
jsonschema = "0.37"
regex = "1.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tempfile = "3.23"
base64 = "0.22"
glob = "0.3"

# Runtime support for shared types and fmt functions
codegen-runtime = { path = "../codegen-runtime", features = ["test-helpers"] }

# For dynamic loading of compiled functions
libloading = "0.9"

rayon = "1.11"
indoc = "2.0"
